--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
+- degree: engineer
   uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+  year: July, 2019 &mdash; January, 2019
   # awards:
-  # summary:
+  # summary:engineer
