--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
 - degree: engineer
-  uni: Udacity
+  uni: carleton
   year: July, 2019 &mdash; January, 2019
   # awards:
   # summary:engineer
