--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,4 +3,5 @@
   uni: carleton
   year: July, 2019 &mdash; January, 2019
   # awards:
-  # summary:engineer
+  # summary:
+  -summary: engineer degree
